libs/preprocessor/tests/errors/pe16_if_incompatible_types/source.hpp
#define A "Hello"

#if A > 2
data = "someting";
#endif
